--- a/src/main/resources/templates/EmailConfirmation.html
+++ b/src/main/resources/templates/EmailConfirmation.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Email Confirmation</title>
 </head>
 <body>
 
 <p style="color: red">
-    <h1>Pro</h1> potvrzení vaší emailové adresy klikněte prosím zde: http://195.181.209.16/#/overeni/<span>${token}</span>
+    <h1>Pro</h1> potvrzení vaší emailové adresy klikněte prosím zde: http://195.181.209.16/#/overeni/[[${token}]]
 </p>
 
 </body>
