--- a/src/main/resources/templates/EmailConfirmation.html
+++ b/src/main/resources/templates/EmailConfirmation.html
@@ -7,7 +7,7 @@
 <body>
 
 <p style="color: red">
-    <h1>Pro</h1> potvrzení vaší emailové adresy klikněte prosím zde: http://195.181.209.16/#/overeni/<span>${token}</span>
+    <h1>Pro</h1> potvrzení vaší emailové adresy klikněte prosím zde: http://195.181.209.16/#/overeni/[[${token}]]
 </p>
 
 </body>
