Reservation summary email template update

--- a/src/main/resources/templates/ReservationSummary.html
+++ b/src/main/resources/templates/ReservationSummary.html
@@ -7,7 +7,7 @@
 <body>
 
 <p style="color: red">
-Odkaz pro smazání rezervace: http://195.181.209.16/#/smazat-rezervaci?token=[[${deleteToken}]]
+Odkaz pro smazání rezervace: http://195.181.209.16/#/smazat-rezervaci/[[${deleteToken}]]
 </p>
 
 </body>
