--- a/src/main/resources/templates/ProfessionalPlayerInvitationNonRegisteredPlayer.html
+++ b/src/main/resources/templates/ProfessionalPlayerInvitationNonRegisteredPlayer.html
@@ -2,11 +2,11 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Potvrzení jako závodní hráč</title>
+    <title>Pozvání do aplikace TK21</title>
 </head>
 <body>
 
-http://195.181.209.16/#/potvrzeni-zavodniho-hrace/[[${token}]]
+http://195.181.209.16/#/zmena-hesla/[[${token}]]
 
 </body>
 </html>
