--- a/src/main/resources/templates/ForgottenPassword.html
+++ b/src/main/resources/templates/ForgottenPassword.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-[[$url]]/#/zmena-hesla/[[${token}]]?forgot=true
+[[${url}]]/#/zmena-hesla/[[${token}]]?forgot=true
 
 </body>
 </html>
