--- a/src/main/resources/templates/ProfessionalPlayerInvitationNonRegistered.html
+++ b/src/main/resources/templates/ProfessionalPlayerInvitationNonRegistered.html
@@ -2,7 +2,7 @@
 <html lang="cs" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Máte nového závodního hráče</title>
+	<title>Potvrďte zda jste závodní hráč</title>
 </head>
 <body>
 	<div style="display: flex; flex-wrap: wrap; padding: 15px; font-family: sans-serif;">
@@ -11,9 +11,16 @@
 		</div>
 		<div style="flex-grow: 1; color: #CE6B27; background-color: #F2DCCA; padding: 15px; border-radius: 10px; border-right: 20px solid #CE6B27;">
 			<p style="font-weight: bold;">Vážený/á pane/paní,</p>
-			<p style="margin-top: 15px;">hráč [[${name}]] [[${surname}]] s e-mailem <a th:href="@{'mailto:'+${email}}" style="color: #CE6B27;">[[${email}]]</a>, potvrdil, že je závodní hráč s <a th:href="${cztenisUserPage}" style="color: #CE6B27;">touto stránkou na cztenis.cz</a>.</p>
+			<p style="margin-top: 15px;">administrátor klubu <a th:href="@{${url} + '/#/klub/' + ${clubID}}" style="color: #CE6B27;">[[${name}]]</a> Vám vytvořil nový účet závodního hráče v <a th:href="${url}" style="color: #CE6B27;">aplikaci TK21</a>.</p>
+			<p style="margin-top: 15px;">Váš účet je propojený s <a th:href="${cztenisUserPage}" style="color: #CE6B27;">touto stránkou na cztenis.cz</a>. Jedná-li se o Vás, dokončete vytvoření účtu tím, že kliknete na tlačítko níže
+			a nastavíte si heslo.</p>
 			<p style="margin-top: 15px;">
-				Pokud jste nechtěl/a tohoto hráče označit jako závodního, přejděte přihlášen/a v aplikaci na <a th:href="@{${url}+'/#/klub/'+${clubId}}" style="color: #CE6B27;">stránku Vašeho klubu</a>, poté běžte do sekce závodní hráči a hráče degradujte na rekreačního.
+				<a th:href="@{${url} + '/#/zmena-hesla/' + ${token}" style="color: white;"><div style="font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; text-transform: uppercase; border-radius: 50px; display: inline-block;">
+					NASTAVIT HESLO
+				</div></a>
+			</p>
+			<p style="margin-top: 15px;">
+				Nejedná-li se o Vás e-mail ignorujte.
 			</p>
 			<p style="margin-top: 15px; font-weight: bold;">
 				S práním hezkého dne<br/>
