--- a/src/main/resources/templates/ReservationSummaryNonRegistered.html
+++ b/src/main/resources/templates/ReservationSummaryNonRegistered.html
@@ -2,7 +2,7 @@
 <html lang="cs" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Máte nového závodního hráče</title>
+	<title>Rekapitulace rezervace</title>
 </head>
 <body>
 	<div style="display: flex; flex-wrap: wrap; padding: 15px; font-family: sans-serif;">
@@ -11,9 +11,14 @@
 		</div>
 		<div style="flex-grow: 1; color: #CE6B27; background-color: #F2DCCA; padding: 15px; border-radius: 10px; border-right: 20px solid #CE6B27;">
 			<p style="font-weight: bold;">Vážený/á pane/paní,</p>
-			<p style="margin-top: 15px;">hráč [[${name}]] [[${surname}]] s e-mailem <a th:href="@{'mailto:'+${email}}" style="color: #CE6B27;">[[${email}]]</a>, potvrdil, že je závodní hráč s <a th:href="${cztenisUserPage}" style="color: #CE6B27;">touto stránkou na cztenis.cz</a>.</p>
+			<p style="margin-top: 15px;">na Vaše jméno ([[${name}]] [[${surname}]]) byla vytvořena rezervace v <a th:href="@{${url} + '/#/klub/' + ${clubID}}" style="color: #CE6B27;">[[${clubName}]]</a>:</p>
+			<div style="margin-top: 15px; background: #f9f1eb; max-width: 500px; padding: 20px; border-radius: 10px;">
+				<div>Kurt: [[${courtName}]]</div>
+				<div style="font-size: 1.2em; font-weight: bold;">[[${day}]].&nbsp;[[${month}]].&nbsp;[[${reservationYear}]] [[${timeFrom}]]&nbsp;-&nbsp;[[${timeTo}]]</div>
+				<a th:href="@{${url} + '/#/smazat-rezervaci/' + ${token}}" style="display: block; margin-top: 10px;"><div style="background: #CE6B27; color: white; text-decoration: none; padding: 10px; border-radius: 10px; text-align: center;">Zrušit rezervaci</div></a>
+			</div>
 			<p style="margin-top: 15px;">
-				Pokud jste nechtěl/a tohoto hráče označit jako závodního, přejděte přihlášen/a v aplikaci na <a th:href="@{${url}+'/#/klub/'+${clubId}}" style="color: #CE6B27;">stránku Vašeho klubu</a>, poté běžte do sekce závodní hráči a hráče degradujte na rekreačního.
+				Pokud jste si žádnou rezervaci nedělali, zrušte ji prosím kliknutím na tlačítko výše, nebo napište na kontaktní e-mail klubu <a th:href="@{'mailto:' + ${clubEmail}}" style="color: #CE6B27;">[[${clubEmail}]]</a>.
 			</p>
 			<p style="margin-top: 15px; font-weight: bold;">
 				S práním hezkého dne<br/>
