Mail templates updated

--- a/src/main/resources/templates/ClubRegisteredInfo.html
+++ b/src/main/resources/templates/ClubRegisteredInfo.html
@@ -13,8 +13,8 @@
 			<p style="font-weight: bold;">Vážený/á pane/paní,</p>
 			<p style="margin-top: 15px;">úspěšně jste zaregistrovali klub <a th:href="@{${url} + '/#/klub/' + ${clubID}}" style="color: #CE6B27;">[[${name}]]</a>. Děkujeme, že hodláte využívat naši aplikaci, která z Vašeho klubu dělá klub 21. století.</p>
 			<p style="margin-top: 15px;">Pokud jste klub neregistrovali, kontaktujte Nás prosím na <a href="mailto:info@tk21.cz" style="color: #CE6B27;">info@tk21.cz</a>.</p>
-			<h3>Co dále?</h3>
-			<p>První Vaše kroky by nyní měly vést do sekce <i>nastavení klubu</i>. Přihlášen běžte na hlavní stránku klubu, poté v horním panelu uvidíte položku <i>nastavení klubu</i>. Nezapomeňte nastavit základní informace:</p>
+			<h3 style="margin-top: 15px;">Co dále?</h3>
+			<p style="margin-top: 15px;">První Vaše kroky by nyní měly vést do sekce <i>nastavení klubu</i>. Přihlášen běžte na hlavní stránku klubu, poté v horním panelu uvidíte položku <i>nastavení klubu</i>. Nezapomeňte nastavit základní informace:</p>
 			<div style="margin-top: 15px; display: flex; align-items: center;"><div style="height: 30px; width: 30px; border: 2px solid #CE6B27; display: flex; align-items: center; justify-content: center; border-radius: 100%; font-weight: bold; background: #F7F176; margin-right: 10px;">1.</div> Kurty</div>
 			<div style="margin-top: 15px; display: flex; align-items: center;"><div style="height: 30px; width: 30px; border: 2px solid #CE6B27; display: flex; align-items: center; justify-content: center; border-radius: 100%; font-weight: bold; background: #F7F176; margin-right: 10px;">2.</div> Běžnou otevírací dobu</div>
 			<div style="margin-top: 15px; display: flex; align-items: center;"><div style="height: 30px; width: 30px; border: 2px solid #CE6B27; display: flex; align-items: center; justify-content: center; border-radius: 100%; font-weight: bold; background: #F7F176; margin-right: 10px;">3.</div> Sezóny</div>
@@ -24,7 +24,7 @@
 				<a th:href="${url}" style="color: #CE6B27;">TK21 - tenisový klub 21. století</a>
 			</p>
 		</div>
-		<div style="flex: 100%; margin-top: 20px; text-align: center; font-size: 0.8em; color: #CE6B27;">
+		<div style="flex: 100%; padding: 20px; text-align: center; font-size: 0.8em; color: #CE6B27;">
 			&copy; [[${year}]] Ondřej Mareš a Otto Vodvářka | <a th:href="${url}" style="color: #CE6B27;">www.tk21.cz</a> | <a href="mailto:info@tk21.cz" style="color: #CE6B27;">info@tk21.cz</a>
 		</div>
 	</div>
