--- a/src/main/resources/templates/EmailConfirmation.html
+++ b/src/main/resources/templates/EmailConfirmation.html
@@ -13,17 +13,17 @@
 			<p style="font-weight: bold;">Vážený/á pane/paní,</p>
 			<p style="margin-top: 15px;">Z <a th:href="${url}" style="color: #CE6B27;">aplikace TK21</a> byl založen účet s touto e-mailovou adresou. E-mail je potřeba ověřit. Pro ověření klikněte prosím na tlačítko níže.</p>
 			<p style="margin-top: 15px;">
-				<a th:href="@{http://195.181.209.16/#/overeni/} + ${token}" style="color: white;"><div style="font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block;">
+				<a th:href="@{${url} + '/#/overeni/' + ${token}}" style="color: white;"><div style="text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block;">
 				OVĚŘIT E-MAIL
 			</div></a>
 			</p>
-			<p>Pokud jste nezakládali účet s touto adresou, e-mail ignorujte.</p>
+			<p style="margin-top: 15px;">Pokud jste nezakládali účet s touto adresou, e-mail ignorujte.</p>
 			<p style="margin-top: 15px; font-weight: bold;">
 				S práním hezkého dne<br/>
 				<a th:href="${url}"  style="color: #CE6B27;">TK21 - tenisový klub 21. století</a>
 			</p>
 		</div>
-		<div style="flex: 100%; margin-top: 20px; text-align: center; font-size: 0.8em; color: #CE6B27;">
+		<div style="flex: 100%; padding: 20px; text-align: center; font-size: 0.8em; color: #CE6B27;">
 			&copy; [[${year}]] Ondřej Mareš a Otto Vodvářka | <a th:href="${url}" style="color: #CE6B27;">www.tk21.cz</a> | <a href="mailto:info@tk21.cz" style="color: #CE6B27;">info@tk21.cz</a>
 		</div>
 	</div>
