--- a/src/main/resources/templates/ForgottenPassword.html
+++ b/src/main/resources/templates/ForgottenPassword.html
@@ -13,7 +13,7 @@
 			<p style="font-weight: bold;">Vážený/á pane/paní,</p>
 			<p style="margin-top: 15px;">Z <a th:href="${url}" style="color: #CE6B27;">aplikace TK21</a> byla vygenerována žádost na změnu hesla k účtu, vedeného k tomuto e-mailu. Heslo si nastavíte kliknutím na tlačítko níže.</p>
 			<p style="margin-top: 15px;">
-				<a th:href="@{${url} + '/#/zmena-hesla/' + ${token} + '?forgot=true'" style="color: white;"><div style="font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block;">
+				<a th:href="@{${url} + '/#/zmena-hesla/' + ${token} + '?forgot=true'" style="color: white;"><div style="text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block;">
 				NASTAVIT HESLO
 			</div></a>
 			</p>
@@ -23,7 +23,7 @@
 				<a th:href="${url}"  style="color: #CE6B27;">TK21 - tenisový klub 21. století</a>
 			</p>
 		</div>
-		<div style="flex: 100%; margin-top: 20px; text-align: center; font-size: 0.8em; color: #CE6B27;">
+		<div style="flex: 100%; padding: 20px; text-align: center; font-size: 0.8em; color: #CE6B27;">
 			&copy; [[${year}]] Ondřej Mareš a Otto Vodvářka | <a th:href="${url}" style="color: #CE6B27;">www.tk21.cz</a> | <a href="mailto:info@tk21.cz" style="color: #CE6B27;">info@tk21.cz</a>
 		</div>
 	</div>
