--- a/src/main/resources/templates/ProfessionalPlayerInvitation.html
+++ b/src/main/resources/templates/ProfessionalPlayerInvitation.html
@@ -14,7 +14,7 @@
 			<p style="margin-top: 15px;">administrátor klubu <a th:href="@{${url} + '/#/klub/' + ${clubID}}" style="color: #CE6B27;">[[${name}]]</a> Vás označil jako závodního hráče se stránkou na <a th:href="${cztenisUserPage}" style="color: #CE6B27;">cztenis.cz</a>, kterou si můžete prohlédnout <a th:href="${cztenisUserPage}" style="color: #CE6B27;">zde</a>.</p>
 			<p style="margin-top: 15px;">Jste-li skutečně závodní hráč v [[${name}]], potvrďte tuto skutečnost kliknutím na tlačítko níže:</p>
 			<p style="margin-top: 15px;">
-				<a th:href="@{${url} + '/#/potvrzeni-zavodniho-hrace/' + ${token}" style="color: white;"><div style="font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; text-transform: uppercase; border-radius: 50px; display: inline-block;">
+				<a th:href="@{${url} + '/#/potvrzeni-zavodniho-hrace/' + ${token}" style="color: white;"><div style="text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; text-transform: uppercase; border-radius: 50px; display: inline-block;">
 					JSEM ZÁVODNÍ HRÁČ V [[${name}]]
 				</div></a>
 			</p>
@@ -23,7 +23,7 @@
 				<a th:href="${url}" style="color: #CE6B27;">TK21 - tenisový klub 21. století</a>
 			</p>
 		</div>
-		<div style="flex: 100%; margin-top: 20px; text-align: center; font-size: 0.8em; color: #CE6B27;">
+		<div style="flex: 100%; padding: 20px; text-align: center; font-size: 0.8em; color: #CE6B27;">
 			&copy; [[${year}]] Ondřej Mareš a Otto Vodvářka | <a th:href="${url}" style="color: #CE6B27;">www.tk21.cz</a> | <a href="mailto:info@tk21.cz" style="color: #CE6B27;">info@tk21.cz</a>
 		</div>
 	</div>
