--- a/src/main/resources/templates/ForgottenPassword.html
+++ b/src/main/resources/templates/ForgottenPassword.html
@@ -13,7 +13,7 @@
 			<p style="font-weight: bold;">Vážený/á pane/paní,</p>
 			<p style="margin-top: 15px;">Z <a th:href="${url}" style="color: #CE6B27;">aplikace TK21</a> byla vygenerována žádost na změnu hesla k účtu, vedeného k tomuto e-mailu. Heslo si nastavíte kliknutím na tlačítko níže.</p>
 			<p style="margin-top: 15px;">
-				<a th:href="@{${url} + '/#/zmena-hesla/' + ${token} + '?forgot=true'" style="color: white;"><div style="text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block;">
+				<a th:href="@{${url} + '/#/zmena-hesla/' + ${token} + '?forgot=true'}" style="color: white;"><div style="text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block;">
 				NASTAVIT HESLO
 			</div></a>
 			</p>
