--- a/src/main/resources/templates/EmailConfirmation.html
+++ b/src/main/resources/templates/EmailConfirmation.html
@@ -5,17 +5,17 @@
 	<title>Ověření e-mailové adresy TK21</title>
 </head>
 <body>
-	<div style="display: flex; flex-wrap: wrap; padding: 15px; font-family: sans-serif;">
-		<div style="margin: 0 20px 20px 0;">
+	<div style="padding: 15px; font-family: sans-serif;">
+		<div style="margin: 0 20px 20px 0; display: block;">
 			<img th:src="@{${url} + '/logoEmail.png'}" alt="Logo" style="width: 70px;">
 		</div>
-		<div style="flex-grow: 1; color: #CE6B27; background-color: #F2DCCA; padding: 15px; border-radius: 10px; border-right: 20px solid #CE6B27;">
+		<div style="color: #CE6B27; background-color: #F2DCCA; padding: 15px; border-radius: 10px; border-right: 20px solid #CE6B27; display: block;">
 			<p style="font-weight: bold;">Vážený/á pane/paní,</p>
 			<p style="margin-top: 15px;">Z <a th:href="${url}" style="color: #CE6B27;">aplikace TK21</a> byl založen účet s touto e-mailovou adresou. E-mail je potřeba ověřit. Pro ověření klikněte prosím na tlačítko níže.</p>
 			<p style="margin-top: 15px;">
-				<a th:href="@{${url} + '/#/overeni/' + ${token}}" style="color: white;"><div style="text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block;">
+				<a th:href="@{${url} + '/#/overeni/' + ${token}}" style="color: white; text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block;">
 				OVĚŘIT E-MAIL
-			</div></a>
+				</a>
 			</p>
 			<p style="margin-top: 15px;">Pokud jste nezakládali účet s touto adresou, e-mail ignorujte.</p>
 			<p style="margin-top: 15px; font-weight: bold;">
@@ -23,7 +23,7 @@
 				<a th:href="${url}"  style="color: #CE6B27;">TK21 - tenisový klub 21. století</a>
 			</p>
 		</div>
-		<div style="flex: 100%; padding: 20px; text-align: center; font-size: 0.8em; color: #CE6B27;">
+		<div style="padding: 20px; text-align: center; font-size: 0.8em; color: #CE6B27; display: block;">
 			&copy; [[${year}]] Ondřej Mareš a Otto Vodvářka | <a th:href="${url}" style="color: #CE6B27;">www.tk21.cz</a> | <a href="mailto:info@tk21.cz" style="color: #CE6B27;">info@tk21.cz</a>
 		</div>
 	</div>
