--- a/src/main/resources/templates/ForgottenPassword.html
+++ b/src/main/resources/templates/ForgottenPassword.html
@@ -5,25 +5,25 @@
 	<title>Změna hesla</title>
 </head>
 <body>
-	<div style="display: flex; flex-wrap: wrap; padding: 15px; font-family: sans-serif;">
-		<div style="margin: 0 20px 20px 0;">
+	<div style="padding: 15px; font-family: sans-serif;">
+		<div style="margin: 0 20px 20px 0; display: block;">
 			<img th:src="@{${url} + '/logoEmail.png'}" alt="Logo" style="width: 70px;">
 		</div>
-		<div style="flex-grow: 1; color: #CE6B27; background-color: #F2DCCA; padding: 15px; border-radius: 10px; border-right: 20px solid #CE6B27;">
+		<div style="color: #CE6B27; background-color: #F2DCCA; padding: 15px; border-radius: 10px; border-right: 20px solid #CE6B27; display: block;">
 			<p style="font-weight: bold;">Vážený/á pane/paní,</p>
 			<p style="margin-top: 15px;">Z <a th:href="${url}" style="color: #CE6B27;">aplikace TK21</a> byla vygenerována žádost na změnu hesla k účtu, vedeného k tomuto e-mailu. Heslo si nastavíte kliknutím na tlačítko níže.</p>
 			<p style="margin-top: 15px;">
-				<a th:href="@{${url} + '/#/zmena-hesla/' + ${token} + '?forgot=true'}" style="color: white;"><div style="text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block;">
-				NASTAVIT HESLO
-			</div></a>
+				<a th:href="@{${url} + '/#/zmena-hesla/' + ${token} + '?forgot=true'}" style="color: white; text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block;">
+					NASTAVIT HESLO
+				</a>
 			</p>
-			<p>Pokud jste žádnou žádost nevygenerovali, e-mail ignorujte.</p>
+			<p style="margin-top: 15px;">Pokud jste žádnou žádost nevygenerovali, e-mail ignorujte.</p>
 			<p style="margin-top: 15px; font-weight: bold;">
 				S práním hezkého dne<br/>
 				<a th:href="${url}"  style="color: #CE6B27;">TK21 - tenisový klub 21. století</a>
 			</p>
 		</div>
-		<div style="flex: 100%; padding: 20px; text-align: center; font-size: 0.8em; color: #CE6B27;">
+		<div style="padding: 20px; text-align: center; font-size: 0.8em; color: #CE6B27; display: block;">
 			&copy; [[${year}]] Ondřej Mareš a Otto Vodvářka | <a th:href="${url}" style="color: #CE6B27;">www.tk21.cz</a> | <a href="mailto:info@tk21.cz" style="color: #CE6B27;">info@tk21.cz</a>
 		</div>
 	</div>
