--- a/src/main/resources/templates/ProfessionalPlayerInvitationNonRegistered.html
+++ b/src/main/resources/templates/ProfessionalPlayerInvitationNonRegistered.html
@@ -5,19 +5,19 @@
 	<title>Potvrďte zda jste závodní hráč</title>
 </head>
 <body>
-	<div style="display: flex; flex-wrap: wrap; padding: 15px; font-family: sans-serif;">
-		<div style="margin: 0 20px 20px 0;">
+	<div style="display: block; padding: 15px; font-family: sans-serif;">
+		<div style="margin: 0 20px 20px 0; display: block;">
 			<img th:src="@{${url} + '/logoEmail.png'}" alt="Logo" style="width: 70px;">
 		</div>
-		<div style="flex-grow: 1; color: #CE6B27; background-color: #F2DCCA; padding: 15px; border-radius: 10px; border-right: 20px solid #CE6B27;">
+		<div style="display: block; color: #CE6B27; background-color: #F2DCCA; padding: 15px; border-radius: 10px; border-right: 20px solid #CE6B27;">
 			<p style="font-weight: bold;">Vážený/á pane/paní,</p>
 			<p style="margin-top: 15px;">administrátor klubu <a th:href="@{${url} + '/#/klub/' + ${clubID}}" style="color: #CE6B27;">[[${name}]]</a> Vám vytvořil nový účet závodního hráče v <a th:href="${url}" style="color: #CE6B27;">aplikaci TK21</a>.</p>
 			<p style="margin-top: 15px;">Váš účet je propojený s <a th:href="${cztenisUserPage}" style="color: #CE6B27;">touto stránkou na cztenis.cz</a>. Jedná-li se o Vás, dokončete vytvoření účtu tím, že kliknete na tlačítko níže
 			a nastavíte si heslo.</p>
 			<p style="margin-top: 15px;">
-				<a th:href="@{${url} + '/#/zmena-hesla/' + ${token}" style="color: white;"><div style="text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; text-transform: uppercase; border-radius: 50px; display: inline-block;">
+				<a th:href="@{${url} + '/#/zmena-hesla/' + ${token}" style="color: white; text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block; text-transform: uppercase;">
 					NASTAVIT HESLO
-				</div></a>
+				</a>
 			</p>
 			<p style="margin-top: 15px;">
 				Nejedná-li se o Vás e-mail ignorujte.
@@ -27,7 +27,7 @@
 				<a th:href="${url}" style="color: #CE6B27;">TK21 - tenisový klub 21. století</a>
 			</p>
 		</div>
-		<div style="flex: 100%; padding: 20px; text-align: center; font-size: 0.8em; color: #CE6B27;">
+		<div style="display: block; padding: 20px; text-align: center; font-size: 0.8em; color: #CE6B27;">
 			&copy; [[${year}]] Ondřej Mareš a Otto Vodvářka | <a th:href="${url}" style="color: #CE6B27;">www.tk21.cz</a> | <a href="mailto:info@tk21.cz" style="color: #CE6B27;">info@tk21.cz</a>
 		</div>
 	</div>
