--- a/src/main/resources/templates/ProfessionalPlayerInvitationNonRegistered.html
+++ b/src/main/resources/templates/ProfessionalPlayerInvitationNonRegistered.html
@@ -15,7 +15,7 @@
 			<p style="margin-top: 15px;">Váš účet je propojený s <a th:href="${cztenisUserPage}" style="color: #CE6B27;">touto stránkou na cztenis.cz</a>. Jedná-li se o Vás, dokončete vytvoření účtu tím, že kliknete na tlačítko níže
 			a nastavíte si heslo.</p>
 			<p style="margin-top: 15px;">
-				<a th:href="@{${url} + '/#/zmena-hesla/' + ${token}" style="color: white; text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block; text-transform: uppercase;">
+				<a th:href="@{${url} + '/#/zmena-hesla/' + ${token}}" style="color: white; text-decoration: none; font-size: 1.2em; cursor: pointer; background-color: #CE6B27; padding: 15px 25px; border-radius: 50px; display: inline-block; text-transform: uppercase;">
 					NASTAVIT HESLO
 				</a>
 			</p>
